--- a/sections/ReferenceBook.tex
+++ b/sections/ReferenceBook.tex
@@ -14,6 +14,10 @@
     Linear Models with R(2nd Edition). Julian J. Faraway. CRC Press.
     \bibitem{多元统计分析ref1}
     实用多元统计分析（第六版）. Richard A. Johnson, Dean W. Wichern. 清华大学出版社.
+    \bibitem{数据科学导论ref1}
+    R In Action: Data Analysis and Graphics with R(2nd Edition). Robert I. Kabacoff. Manning Publications Co.
+    \bibitem{数据科学导论ref2}
+    R Programming For Data Science. Roger D. Peng. Lean Publishing.
 
 
 
