--- a/summary.tex
+++ b/summary.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{ctexart}
+\documentclass[x11names,11pt,a4paper]{ctexart}
 %以下为所使用的宏包
 \usepackage{ulem}%下划线
 \usepackage{amsmath,amsfonts,amssymb,amsthm,amsbsy}%数学符号
@@ -6,6 +6,7 @@
 \usepackage{booktabs}%三线表
 %\usepackage{indentfirst}%首行缩进
 \usepackage{tikz}%作图
+\usetikzlibrary{shapes,arrows,chains}
 \usepackage{appendix}%附录
 \usepackage{array}%多行公式/数组
 \usepackage{tabularx}%绘制定宽表格
@@ -23,6 +24,7 @@
 \usepackage{color,xcolor}%颜色设置
 \usepackage{titlesec}%标题格式设置
 \usepackage{makeidx}\makeindex%索引 编译命令 makeindex summary.idx
+\usepackage{authblk}%titlepage作者信息
 
 
 
@@ -54,11 +56,12 @@
 \definecolor{CodePurPle}{HTML}{D33682}
 \definecolor{CodeGreen2}{HTML}{859900}
 \lstset{
+    language=R,
     basicstyle=\fontspec{Consolas},
     numbers=left, %设置行号位置
     numberstyle=\tiny\color{black}, %设置行号大小
     keywordstyle=\color{black}, %设置关键字颜色
-    stringstyle=\color{CodeRed}, %设置字符串颜色
+    stringstyle=\color{gray}, %设置字符串颜色
     commentstyle=\color{CodeGreen}, %设置注释颜色
     frame=single, %设置边框格式
     escapeinside=``, %逃逸字符(1左面的键)，用于显示中文
@@ -67,18 +70,16 @@
     xleftmargin=2em,xrightmargin=2em, aboveskip=1em, %设置边距
     tabsize=4, %设置tab空格数
     showspaces=false, %不显示空格
-    emph={TRUE,FALSE,NULL,NAN,NA,\$,<-,},emphstyle=\color{CodeBlue2}, %其他高亮
+    emph={TRUE,FALSE,NULL,NAN,NA,\$,<-,T,F,:},emphstyle=\color{CodeBlue2}, %其他高亮
 }
 
 %节标题格式设置
 \titleformat{\section}[block]{\centering\Large\bfseries}{Chapter. \Roman{section} }{1em}{}[]
-\titleformat{\subsection}[block]{\large\bfseries}{Section \arabic{section}.\arabic{subsection} }{1em}{}[]
+\titleformat{\subsection}[block]{\Large\bfseries}{Section \arabic{section}.\arabic{subsection}}{1em}{}[]
 % \titleformat{\subsubsection}[block]{\normalsize\bfseries}{    \arabic{subsection}-\alph{subsubsection}}{1em}{}[]
 % \titleformat{\paragraph}[block]{\small\bfseries}{[\arabic{paragraph}]}{1em}{}[]
 
 % \\titleformat{\\sectioncommand}[shape]{format}{title-label}{sep}{before-title}[after-title]
-
-
 
 
 %SumatraPDF反向搜索命令行
@@ -89,7 +90,8 @@
 
 \begin{titlepage}
     \title{\textbf{A Brief Summary of Statistics Course}\\统计学课程知识总结}
-    \author{Vincent}
+    \author[]{Vincent\thanks{V1ncent19@outlook.com}}
+    \affil[]{Department of Physics, Tsinghua University}
 \end{titlepage}
 
 \begin{document}
@@ -98,6 +100,32 @@
 
 \tableofcontents
 \newpage
+
+
+
+
+% =================================================
+% Set up a few colours
+\colorlet{lcfree}{Green3}
+\colorlet{lcnorm}{Blue3}
+\colorlet{lccong}{Red3}
+% -------------------------------------------------
+% Set up a new layer for the debugging marks, and make sure it is on
+% top
+\pgfdeclarelayer{marx}
+\pgfsetlayers{main,marx}
+% A macro for marking coordinates (specific to the coordinate naming
+% scheme used here). Swap the following 2 definitions to deactivate
+% marks.
+\providecommand{\cmark}[2][]{%
+  \begin{pgfonlayer}{marx}
+    \node [nmark] at (c#2#1) {#2};
+  \end{pgfonlayer}{marx}
+  } 
+\providecommand{\cmark}[2][]{\relax} 
+% -------------------------------------------------
+
+
 
 
 \include{sections/初等概率论}
@@ -115,13 +143,14 @@
 \include{sections/多元统计分析}
 \newpage
 
-
-
+\include{sections/数据科学导论}
+\newpage
 
 \include{sections/ReferenceBook}
 \newpage
 
 \newpage
+\addcontentsline{toc}{section}{索引}
 \printindex
 
 
